--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,15 @@ repositories {
 }
 
 dependencies {
+    implementation 'com.sparkjava:spark-core:2.9.4'
+    implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'org.slf4j:slf4j-simple:2.0.9'
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.36'
+
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.26.3'
+
 }
 
 test {
